# evwheelguard

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  install.sh  pyproject.toml  uninstall.sh
docs/: FEDORA-WAYLAND.md  TROUBLESHOOTING.md
examples/: evwheelguard.service  evwheelguard.user.service
packaging/: 99-uinput.rules
scripts/: quick-test.sh  set-github-username.sh
src/evwheelguard/: cli.py
